--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header class="text-ligt header">
         <div class="container mt-0 pt-0">
             <p class="mx-3 pt-5" style="color:aquamarine; font-size: 24px;">
-                Aplicaciones HMTL, CSS, FLEX y bootstrap.
+                Desarrollos en HMTL, CSS, FLEX y bootstrap.
             </p>
         </div>
     </header>
@@ -138,7 +138,7 @@
 
     <!-- footer -->
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Alberto Guerrero P 2023. Todos los derechos reservados.</p>
+        <p class="mb-0">Alberto Guerrero P 2023. <br> Todos los derechos reservados.</p>
     </footer>
     <!-- footer END-->
 
