--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-md-4">
-                        <i class="fa-sharp fa-solid fa-signal fa-2xl my-3"></i>
+                        <i class="fa-sharp fa-solid fa-eye fa-2xl my-3"></i>
                         <h5 class="my-3 fw-bold">Ingeriero en Terreno</h5>
                         <p class="my-3">
                             Implementación de red LTE Privada.
